<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:scaleX="1"
    android:scaleY="1"
    android:stateListAnimator="@android:anim/slide_in_left"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/TopBar"
        android:layout_width="0dp"
        android:layout_height="173dp"
        android:contentDescription="@string/Topbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oval"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/BottomBar"
        android:layout_width="271dp"
        android:layout_height="272dp"
        android:contentDescription="@string/BottomBar"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/semi_circle" />

    <androidx.cardview.widget.CardView
        android:layout_width="119dp"
        android:layout_height="119dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/UserProfile"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TopBar">

        <ImageView
            android:id="@+id/userProfPic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:layout_margin="10dp"
            android:background="@drawable/profile_pic"
            android:clickable="true"
            android:contentDescription="@string/prfilePicSelector"
            android:focusable="true"
            android:scaleType="centerInside"
            android:scaleX="1"
            android:scaleY="1"
            app:srcCompat="@drawable/profile_pic"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/openClassObj"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_art"
        android:text="@string/let_s_start"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/BottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopBar"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="218dp"
        android:layout_height="49dp"
        android:gravity="center|top"
        android:text="@string/click_here_to_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopBar" />
</androidx.constraintlayout.widget.ConstraintLayout>